added help target

--- a/build.xml
+++ b/build.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Id$ -->
-
-<project name="Ocal" default="default">
-
-    <!-- Properties -->
-
-    <property name="styledir" value="C:\xampp\php\data\phing\etc"/>
-
-    <!-- Filesets -->
+<project name="Ocal" default="help">
 
     <fileset id="php-sources" dir=".">
         <include name="classes/*.php"/>
@@ -27,9 +19,12 @@
         <include name="*Test.php"/>
     </fileset>
 
-    <!-- Checks -->
+    <target name="help" description="lists available targets">
+        <exec command="phing -l" outputProperty="help"/>
+        <echo>${help}</echo>
+    </target>
 
-    <target name="sniff">
+    <target name="sniff" description="checks adherence to PEAR CS">
         <phpcodesniffer standard="PEAR" format="full">
             <fileset refid="php-sources"/>
             <fileset refid="unit-tests"/>
@@ -37,15 +32,14 @@
         </phpcodesniffer>
     </target>
 
-    <target name="compat">
+    <target name="compat"
+            description="checks compatibility with PHP_CompatInfo 2">
         <exec command="phpcompatinfo --configuration phpcompatinfo.xml print
                                      --exclude-pattern ocal ."
               logoutput="true"/>
     </target>
 
-    <!-- Tests -->
-
-    <target name="unit-tests">
+    <target name="unit-tests" description="runs all unit tests">
         <phpunit haltonerror="true" haltonfailure="true">
             <formatter type="plain" usefile="false"/>
             <batchtest>
@@ -54,7 +48,7 @@
         </phpunit>
     </target>
 
-    <target name="attack-tests">
+    <target name="attack-tests" description="runs all attack tests">
         <fail unless="env.CMSIMPLEDIR" message="CMSIMPLEDIR undefined!"/>
         <phpunit haltonerror="true" haltonfailure="true">
             <formatter type="plain" usefile="false"/>
@@ -64,15 +58,9 @@
         </phpunit>
     </target>
 
-    <target name="tests" depends="unit-tests,attack-tests"/>
-
-    <!-- Code coverage -->
-
-    <target name="coverage">
+    <target name="coverage" description="generates coverage report">
         <exec command="phpunit --configuration coverage.xml" logoutput="true"/>
     </target>
-
-    <!-- Documentation -->
 
     <target name="php-doc">
         <phpdoc title="Ocal_XH Developer Documentation" destdir="doc/php"
@@ -95,11 +83,10 @@
         </apply>
     </target>
 
-    <target name="doc" depends="php-doc,js-doc"/>
+    <target name="doc" description="generates the developer documentation"
+            depends="php-doc,js-doc"/>
 
-    <!-- Build -->
-
-    <target name="build">
+    <target name="build" description="builds a distributable ZIP archive">
         <fail unless="version" message="version is not defined!"/>
         <svnexport revision="" repositoryurl="." todir="export"/>
         <move todir="dist">
