--- a/build.xml
+++ b/build.xml
@@ -32,11 +32,15 @@
         </phpcodesniffer>
     </target>
 
-    <target name="compat"
+    <target name="compat2"
             description="checks compatibility with PHP_CompatInfo 2">
-        <exec command="phpcompatinfo --configuration phpcompatinfo.xml print
-                                     --exclude-pattern ocal ."
+        <exec command="C:\xampp\php\phpcompatinfo --configuration phpcompatinfo.xml print --exclude-pattern ocal ."
               logoutput="true"/>
+    </target>
+
+    <target name="compat"
+            description="checks compatibility with PHP_CompatInfo 3">
+        <exec command="phpcompatinfo analyser:run ." logoutput="true"/>
     </target>
 
     <target name="unit-tests" description="runs all unit tests">
@@ -111,7 +115,7 @@
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
                 <exclude name="ocal.komodoproject"/>
-                <exclude name="phpcompatinfo.xml"/>
+                <exclude name="phpcompatinfo.*"/>
                 <exclude name="tests/**"/>
                 <exclude name="TODO"/>
             </fileset>
