--- a/build.xml
+++ b/build.xml
@@ -121,7 +121,7 @@
             </fileset>
         </move>
         <delete dir="export"/>
-        <!--<copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/>-->
+        <copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/>
         <copy file="dist/languages/en.php" tofile="dist/languages/default.php"/>
         <zip destfile="Ocal_XH-${version}.zip" basedir="dist" prefix="ocal/"/>
         <delete dir="dist"/>
