--- a/build.xml
+++ b/build.xml
@@ -32,15 +32,9 @@
         </phpcodesniffer>
     </target>
 
-    <target name="compat2"
-            description="checks compatibility with PHP_CompatInfo 2">
-        <exec command="C:\xampp\php\phpcompatinfo --configuration phpcompatinfo.xml print --exclude-pattern ocal ."
-              logoutput="true"/>
-    </target>
-
     <target name="compat"
-            description="checks compatibility with PHP_CompatInfo 3">
-        <exec command="phpcompatinfo analyser:run ." logoutput="true"/>
+            description="checks compatibility with PHP_CompatInfo">
+        <exec command="phpcompatinfo analyser:run --alias current" logoutput="true"/>
     </target>
 
     <target name="unit-tests" description="runs all unit tests">
