--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,12 @@
         </phpcodesniffer>
     </target>
 
+    <target name="mess" description="detects code flaws">
+        <phpmd>
+            <fileset refid="php-sources"/>
+         </phpmd>
+    </target>
+
     <target name="compat"
             description="checks compatibility with PHP_CompatInfo">
         <exec command="phpcompatinfo analyser:run --alias current" logoutput="true"/>
