implemented autoloading of classes

--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,8 @@
     </target>
 
     <target name="unit-tests" description="runs all unit tests">
-        <phpunit haltonerror="true" haltonfailure="true">
+        <phpunit bootstrap="classes/required_classes.php"
+                 haltonerror="true" haltonfailure="true">
             <formatter type="plain" usefile="false"/>
             <batchtest>
                 <fileset refid="unit-tests"/>
@@ -63,7 +64,7 @@
     </target>
 
     <target name="coverage" description="generates coverage report">
-        <exec command="phpunit --configuration coverage.xml" logoutput="true"/>
+        <exec command="phpunit --bootstrap=classes/required_classes.php --configuration coverage.xml" logoutput="true"/>
     </target>
 
     <target name="php-doc">
