--- a/build.xml
+++ b/build.xml
@@ -108,6 +108,7 @@
         <jsMin targetDir="dist" suffix="" failOnError="false">
             <fileset dir="export">
                 <include name="ocal.js"/>
+                <include name="ocal-front.js"/>
             </fileset>
         </jsMin>
         <move todir="dist">
