Don't ship pax_global_header

--- a/build.xml
+++ b/build.xml
@@ -98,6 +98,7 @@
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
                 <exclude name="ocal.komodoproject"/>
+                <exclude name="pax_global_header"/>
                 <exclude name="phpcompatinfo.*"/>
                 <exclude name="README.md"/>
                 <exclude name="tests/**"/>
