Detect mess also in test cases

--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,8 @@
     <target name="mess" description="detects code flaws">
         <phpmd>
             <fileset refid="php-sources"/>
+            <fileset refid="unit-tests"/>
+            <fileset refid="attack-tests"/>
          </phpmd>
     </target>
 
