--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "phpmd/phpmd": "2.6.*",
         "phpunit/phpunit": "5.7.*",
         "tcz/phpunit-mockfunction": "1.0.*",
-        "mikey179/vfsStream": "1.6.*",
+        "mikey179/vfsstream": "1.6.*",
         "tedivm/jshrink": "1.1.*"
     }
 }
