--- a/build.xml
+++ b/build.xml
@@ -25,11 +25,14 @@
     </target>
 
     <target name="sniff" description="checks adherence to the coding standard">
-        <phpcodesniffer standard="PSR2" format="full">
-            <fileset refid="php-sources"/>
-            <fileset refid="unit-tests"/>
-            <fileset refid="attack-tests"/>
-        </phpcodesniffer>
+        <exec executable="phpcs" passthru="true" checkreturn="true">
+            <arg value="--standard=PSR2"/>
+            <arg line="--runtime-set ignore_warnings_on_exit true"/>
+            <arg file="classes"/>
+            <arg file="tests/attack"/>
+            <arg file="tests/unit"/>
+            <arg file="index.php"/>
+        </exec>
     </target>
 
     <target name="mess" description="detects code flaws">
