--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require-dev": {
         "phing/phing": "^2.17",
-        "squizlabs/php_codesniffer": "2.7.*",
+        "squizlabs/php_codesniffer": "^3.7",
         "phpmd/phpmd": "2.6.*",
         "phpunit/phpunit": "5.7.*",
         "mikey179/vfsstream": "1.6.*",
