Update to PHPUnit 9.5
We drop the attack-test right away; this is just too brittle; we should
rewrite that as developer test.

--- a/build.xml
+++ b/build.xml
@@ -2,14 +2,6 @@
 
 <project name="Ocal" default="help">
 
-    <fileset id="unit-tests" dir="tests/unit">
-        <include name="*Test.php"/>
-    </fileset>
-
-    <fileset id="attack-tests" dir="tests/attack">
-        <include name="*Test.php"/>
-    </fileset>
-
     <target name="help" description="lists available targets">
         <exec command="phing -l" outputProperty="help"/>
         <echo>${help}</echo>
@@ -33,27 +25,14 @@
     </target>
 
     <target name="unit-tests" description="runs all unit tests">
-        <phpunit bootstrap="tests/bootstrap.php"
-                 haltonerror="true" haltonfailure="true">
-            <formatter type="plain" usefile="false"/>
-            <batchtest>
-                <fileset refid="unit-tests"/>
-            </batchtest>
-        </phpunit>
-    </target>
-
-    <target name="attack-tests" description="runs all attack tests">
-        <fail unless="env.CMSIMPLEDIR" message="CMSIMPLEDIR undefined!"/>
-        <phpunit haltonerror="true" haltonfailure="true">
-            <formatter type="plain" usefile="false"/>
-            <batchtest>
-                <fileset refid="attack-tests"/>
-            </batchtest>
-        </phpunit>
+        <exec executable="phpunit" passthru="true" checkreturn="true"/>
     </target>
 
     <target name="coverage" description="generates coverage report">
-        <exec command="phpunit --bootstrap=tests/bootstrap.php --configuration coverage.xml" logoutput="true"/>
+        <exec executable="phpunit" passthru="true" checkreturn="true">
+            <arg value="--coverage-html"/>
+            <arg file="tests/coverage"/>
+        </exec>
     </target>
 
     <target name="build" description="builds a distributable ZIP archive">
@@ -70,7 +49,7 @@
             <fileset dir="export">
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
-                <exclude name="coverage.xml"/>
+                <exclude name="phpunit.xml"/>
                 <exclude name="ocal.komodoproject"/>
                 <exclude name="pax_global_header"/>
                 <exclude name="README.md"/>
