--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
         "phing/phing": "^2.17",
         "squizlabs/php_codesniffer": "^3.7",
         "phpmd/phpmd": "^2.13",
-        "phpunit/phpunit": "5.7.*",
+        "phpunit/phpunit": "^9.5",
         "mikey179/vfsstream": "1.6.*",
         "tedivm/jshrink": "1.1.*"
     }
