--- a/build.xml
+++ b/build.xml
@@ -37,9 +37,9 @@
 
     <target name="build" description="builds a distributable ZIP archive">
         <fail unless="version" message="version is not defined!"/>
-        <exec command="git archive -o export.tar HEAD" checkreturn="true"/>
-        <untar file="export.tar" todir="export"/>
-        <delete file="export.tar"/>
+        <exec command="git archive -o export.zip HEAD" checkreturn="true"/>
+        <unzip file="export.zip" todir="export"/>
+        <delete file="export.zip"/>
         <jsMin targetDir="dist" suffix="" failOnError="false">
             <fileset dir="export">
                 <include name="ocal.js"/>
@@ -51,7 +51,6 @@
                 <exclude name="composer.*"/>
                 <exclude name="phpunit.xml"/>
                 <exclude name="ocal.komodoproject"/>
-                <exclude name="pax_global_header"/>
                 <exclude name="README.md"/>
                 <exclude name="tests/**"/>
                 <exclude name="TODO"/>
