--- a/build.xml
+++ b/build.xml
@@ -12,19 +12,18 @@
             <arg value="--standard=PSR2"/>
             <arg line="--runtime-set ignore_warnings_on_exit true"/>
             <arg file="classes"/>
-            <arg file="tests/attack"/>
-            <arg file="tests/unit"/>
+            <arg file="tests"/>
             <arg file="index.php"/>
         </exec>
     </target>
 
     <target name="mess" description="detects code flaws">
         <exec executable="phpmd" passthru="true" checkreturn="true">
-            <arg line="classes,tests/attack,tests/unit,index.php ansi codesize,unusedcode --ignore-violations-on-exit"/>
+            <arg line="classes,tests,index.php ansi codesize,unusedcode --ignore-violations-on-exit"/>
         </exec>
     </target>
 
-    <target name="unit-tests" description="runs all unit tests">
+    <target name="test" description="runs all developer tests">
         <exec executable="phpunit" passthru="true" checkreturn="true"/>
     </target>
 
