Inject dependencies into CalendarController

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,6 +7,6 @@ parameters:
   bootstrapFiles:
     - phpstan.php
   scanFiles:
-#    - ../../cmsimple/classes/CSRFProtection.php
+    - ../../cmsimple/classes/CSRFProtection.php
     - ../../cmsimple/adminfuncs.php
     - ../../cmsimple/functions.php
