--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,15 @@
     </exec>
   </target>
 
+  <target name="gen-help" description="builds help.htm from README.md">
+    <exec executable="pandoc" passthru="true" checkreturn="true">
+      <arg line="-s --eol=lf --template=help/template.htm -Vlang=en -Vpagetitle=&quot;User Manual&quot; -o help/help.htm README.md -t html"/>
+    </exec>
+    <exec executable="pandoc" passthru="true" checkreturn="true">
+      <arg line="-s --eol=lf --template=help/template.htm -Vlang=de -Vpagetitle=&quot;Benutzerhandbuch&quot; -o help/help_de.htm README_de.md -t html"/>
+    </exec>
+  </target>
+
   <target name="build" description="builds a distributable ZIP archive">
     <fail unless="version" message="version is not defined!"/>
     <exec command="git archive -o export.zip HEAD" checkreturn="true"/>
@@ -52,6 +61,7 @@
     <move todir="dist">
       <fileset dir="export">
         <exclude name=".github/**"/>
+        <exclude name="help/template.htm"/>
         <exclude name="tests/**"/>
         <exclude name="README*.md"/>
         <exclude name="build.xml"/>
