--- a/build.xml
+++ b/build.xml
@@ -49,7 +49,6 @@
   </target>
 
   <target name="build" description="builds a distributable ZIP archive">
-    <fail unless="version" message="version is not defined!"/>
     <exec command="git archive -o export.zip HEAD" checkreturn="true"/>
     <unzip file="export.zip" todir="export"/>
     <delete file="export.zip"/>
@@ -74,7 +73,7 @@
     <delete dir="export"/>
     <copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/>
     <copy file="dist/languages/en.php" tofile="dist/languages/default.php"/>
-    <zip destfile="Ocal_XH-${version}.zip" basedir="dist" prefix="ocal/"/>
+    <zip destfile="Ocal_XH-1.0.zip" basedir="dist" prefix="ocal/"/>
     <delete dir="dist"/>
   </target>
 
