--- a/build.xml
+++ b/build.xml
@@ -75,7 +75,7 @@
     <delete dir="export"/>
     <copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/>
     <copy file="dist/languages/en.php" tofile="dist/languages/default.php"/>
-    <zip destfile="Ocal_XH-1.0.zip" basedir="dist" prefix="ocal/"/>
+    <zip destfile="Ocal_XH-1.1-dev.zip" basedir="dist" prefix="ocal/"/>
     <delete dir="dist"/>
   </target>
 
