--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,9 @@
 <project name="Ocal" default="help">
 
   <target name="help" description="lists available targets">
-    <exec command="phing -l" outputProperty="help"/>
+    <exec executable="phing" outputProperty="help">
+      <arg value="-l"/>
+    </exec>
     <echo>${help}</echo>
   </target>
 
@@ -49,7 +51,9 @@
   </target>
 
   <target name="build" description="builds a distributable ZIP archive">
-    <exec command="git archive -o export.zip HEAD" checkreturn="true"/>
+    <exec executable="git" checkreturn="true">
+      <arg line="archive -o export.zip HEAD"/>
+    </exec>
     <unzip file="export.zip" todir="export"/>
     <delete file="export.zip"/>
     <exec executable="uglifyjs" passthru="true" checkreturn="true">
@@ -62,6 +66,7 @@
     <move todir="dist">
       <fileset dir="export">
         <exclude name=".github/**"/>
+        <exclude name=".phive/**"/>
         <exclude name="help/template.htm"/>
         <exclude name="tests/**"/>
         <exclude name="README*.md"/>
