--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,3 +11,5 @@ parameters:
     - ../../cmsimple/classes/CSRFProtection.php
     - ../../cmsimple/adminfuncs.php
     - ../../cmsimple/functions.php
+  scanDirectories:
+    - ../plib/classes
