--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,11 @@ jobs:
         run: |
           curl -fsSL -o CMSimple_XH-1.8.zip https://github.com/cmsimple-xh/cmsimple-xh/releases/download/1.8.0/CMSimple_XH-1.8.zip
           unzip -q CMSimple_XH-1.8.zip
+      - name: Checkout Plib_XH
+        uses: actions/checkout@v4
+        with:
+          repository: cmb69/plib_xh
+          path: cmsimplexh/plugins/plib
       - name: Checkout Ocal_XH
         uses: actions/checkout@v3
         with:
