--- a/build.xml
+++ b/build.xml
@@ -96,13 +96,13 @@
     <delete dir="export"/>
     <copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/>
     <copy file="dist/languages/en.php" tofile="dist/languages/default.php"/>
-    <zip destfile="Ocal_XH-1.3.zip" basedir="dist" prefix="ocal/"/>
+    <zip destfile="Ocal_XH-1.4-dev.zip" basedir="dist" prefix="ocal/"/>
     <delete dir="dist"/>
   </target>
 
   <target name="build-patch" description="builds a distributable update package">
     <fail unless="patchee" message="patchee is not defined!"/>
-    <unzip file="Ocal_XH-1.3.zip" todir="current"/>
+    <unzip file="Ocal_XH-1.4-dev.zip" todir="current"/>
     <unzip file="${patchee}" todir="patchee"/>
     <copy todir="dist">
       <fileset dir="current">
@@ -116,7 +116,7 @@
         <include name="css/stylesheet.css"/>
       </fileset>
     </delete>
-    <zip destfile="Ocal_XH-1.3-update-from-1.x.zip" basedir="dist" includeemptydirs="false"/>
+    <zip destfile="Ocal_XH-1.4-dev-update-from-1.x.zip" basedir="dist" includeemptydirs="false"/>
     <delete dir="patchee" quiet="true"/>
     <delete dir="current" quiet="true"/>
     <delete dir="dist" quiet="true"/>
